# german-learning-cards

./: .env.example  .gitignore  BUGFIX.md  CHECKPOINT.md  CHECKPOINT_v2.md  DEV_MODE.md  README.md  USAGE.md  debug.py  dev.sh  main.py  pyproject.toml  start-simple.sh  start.sh  test_api.py  test_main.py
.claude/: settings.local.json
templates/: index.html
